[package]
name = "p2p-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
P2P-Server = { path = ".." }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "1.6", features = ["http1", "server"] }
http-body-util = "0.1.3"
bytes = "1.10.1"
hyper-util = { version = "0.1", features = ["tokio"] }
flate2 = "1.0"
mime_guess = "2.0.4"
dashmap = "6.1.0"
base64 = "0.22.1"
chrono = "0.4"
sha2 = "0.10.8"
hex = "0.4.3"
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
colored = "3.0.0"
redb = "=2.4.0"
base64ct = "<1.8"
async-trait = "0.1"

[[bin]]
name = "p2p-gateway"
path = "src/main.rs"

