[package]
name = "p2p-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
P2P-Server = { path = ".." }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"

[[bin]]
name = "p2p-simulation"
path = "src/main.rs"

